--- a/templates/index.html
+++ b/templates/index.html
@@ -113,6 +113,8 @@
                     {% for item in marsInfo.hemisphereImageUrls %}
                     <div class="col-md-6">
                         <div class="card text-white bg-dark" style="margin: 30px;">
+                            <div class="card-body">
+                            <img src="{{ items.img_Url }}" class="card-img-top" alt="...">
                             <img class="card-img-top" src="{{ items.img_Url }}" />
                             <div class="card-body">
                                 <p class="card-text">{{ items.title }}</p>
