--- a/templates/index.html
+++ b/templates/index.html
@@ -110,14 +110,12 @@
             <hr>
             <div class="col-md-12">
                 <div class="row">
-                    {% for item in marsInfo.hemisphereImageUrls %}
+                    {% for item in marsInfo.marsHemisphere %}
                     <div class="col-md-6">
                         <div class="card text-white bg-dark" style="margin: 30px;">
+                                 <img class="card-img-top" src="{{ item.img_url }}" />
                             <div class="card-body">
-                            <img src="{{ items.img_Url }}" class="card-img-top" alt="...">
-                            <img class="card-img-top" src="{{ items.img_Url }}" />
-                            <div class="card-body">
-                                <p class="card-text">{{ items.title }}</p>
+                                <p class="card-text">{{ item.title }}</p>
                             </div>
                         </div>
                     </div>
